--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.9",
-    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.9",
     "@types/express-pino-logger": "^4.0.2",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/pino": "^6.3.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "pino": "^6.8.0"
   },
