--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/pino": "^6.3.4",
+    "@types/socket.io": "^2.1.13",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
-    "pino": "^6.8.0"
+    "pino": "^6.8.0",
+    "socket.io": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
