--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/pino": "^6.3.4",
     "@types/socket.io": "^2.1.13",
+    "@types/uniqid": "^5.2.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -26,7 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "pino": "^6.8.0",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
